crates/formatter/tests/snapshots/snapshots__migrations__000145_user_status_default_dormant.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users alter column status set default 'active'::user_status;
