crates/formatter/tests/snapshots/snapshots__migrations__000147_group_display_name.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table groups add column display_name text not null default '';

comment on column groups.display_name is 'Display name is a custom, human-friendly group name that user can set. This is not required to be unique and can be the empty string.';
