crates/formatter/tests/snapshots/snapshots__migrations__000149_agent_multiple_subsystems.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Add "exectrace" to workspace_agent_subsystem type.
alter type workspace_agent_subsystem add value 'exectrace';

-- Create column subsystems in workspace_agents table, with default value being
-- an empty array.
alter table workspace_agents
	add column subsystems workspace_agent_subsystem[] default '{}';

-- Add a constraint that the subsystems cannot contain the deprecated value
-- 'none'.
alter table workspace_agents
	add constraint subsystems_not_none check (not ('none' = any(subsystems)));

-- Update all existing workspace_agents to have subsystems = [subsystem] unless
-- the subsystem is 'none'.
update workspace_agents
set subsystems = array[subsystem]
where subsystem != 'none';

-- Drop the subsystem column from workspace_agents.
alter table workspace_agents drop column subsystem;
