crates/formatter/tests/snapshots/snapshots__migrations__000150_workspace_app_stats.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table workspace_app_stats;
